// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as-switch Rendering should render label if prop is present 1`] = `
<as-switch
  class="hydrated"
  id="switch"
  label="Switch Label"
>
  
  <div
    class="as-switch"
  >
    <div
      class="as-switch__element"
    >
      <input
        class="as-switch__input"
        id="switch"
        role="switch"
        title=""
        type="checkbox"
      />
      <label
        class="as-switch__toggle"
        for="switch"
      />
      <svg
        class="as-switch__thumb"
        height="8"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.315 7.858L.133 4.441a.506.506 0 0 1 0-.683l.643-.684a.437.437 0 0 1 .642 0l2.219 2.393L8.58.141a.437.437 0 0 1 .643 0l.643.683a.504.504 0 0 1 0 .683l-5.91 6.35a.437.437 0 0 1-.642 0"
          fill="currentColor"
        />
      </svg>
    </div>
    <label
      class="as-switch__label as-body"
    >
      Switch Label
    </label>
  </div>
</as-switch>
`;

exports[`as-switch Rendering should render properly 1`] = `
<as-switch
  class="hydrated"
  id="switch"
>
  
  <input
    class="as-switch__input"
    id="switch"
    role="switch"
    title=""
    type="checkbox"
  />
  <label
    class="as-switch__toggle"
    for="switch"
  />
  <svg
    class="as-switch__thumb"
    height="8"
    width="10"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.315 7.858L.133 4.441a.506.506 0 0 1 0-.683l.643-.684a.437.437 0 0 1 .642 0l2.219 2.393L8.58.141a.437.437 0 0 1 .643 0l.643.683a.504.504 0 0 1 0 .683l-5.91 6.35a.437.437 0 0 1-.642 0"
      fill="currentColor"
    />
  </svg>
</as-switch>
`;
